--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,11 @@
     "target": "ES2022",
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "paths": {
+       "@modules/*" : [
+      "src/app/modules/*"
+      ],
+    },
     "lib": [
       "ES2022",
       "dom"
